# database-sync

./: .eslintrc.cjs  .gitignore  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
proto/: database.proto
protos/database/v1/: database.proto
src/: App.tsx  index.css  main.tsx  updater.ts  updater.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/compare/: database.rs
src-tauri/src/database/: database.rs  esquema.rs  mod.rs  row.rs
src-tauri/src/grpc/: database_server.rs  mod.rs
src-tauri/src/utils/: cstr.rs  cstr_utils.rs  error_utils.rs  mod.rs
src/components/: TildeBar.tsx
src/hooks/: useCommand.ts
src/interfaces/: hash.ts
src/pages/main/: main.tsx
src/pages/main/components/: DbCheck.tsx  DbScript.tsx
src/pages/main/components/tabs/: connect.tsx
src/services/grpc/: databaseService.ts  databaseService.tsx
src/shared/ui/components/ui/: input.tsx
src/utils/: ArrayExtension.ts  Channel.ts  delay.ts  promiseExtension.ts
